[package]
name = "intercom-tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "=1.17.0", features = ["rt-multi-thread", "sync", "signal", "macros"] }
anyhow = "=1.0.56"
tracing = { version = "=0.1.31", features = ["valuable"] }
tokio-tungstenite = { version = "=0.20.0", features = ["native-tls"] }
tungstenite = { version = "=0.20.0", features = ["native-tls"] }
cpal = "=0.15.2"
toml = "=0.5.8"
serde = "=1.0.136"
tracing-subscriber = "=0.3.9"
serde_derive = "=1.0.136"
clap = { version = "=4.0.29", features = ["derive"] }
dirs = "=5.0.0"
futures-util = "=0.3.28"